--- a/src/styles/config/_variables.sass
+++ b/src/styles/config/_variables.sass
@@ -1,11 +1,23 @@
 // Colors
-$black: rgb(0,0, 0)
+$black: rgb(0, 0, 0)
 $light-blue: rgb(6, 252, 239)
 $dark-blue: rgb(26, 79, 219)
+$pale-purple: rgb(57, 61, 108)
 $pale-blue: rgb(49, 109, 150)
+$green: rgb(21, 255, 58)
+$red: rgb(255, 49, 21)
+$gray: rgb(43, 40, 40)
 $acent-color: $light-blue
 $bg-color: $black
+$ok: $green
+$error: $red
+$locked: $gray
 
 
-//Border
+// Border
 $border-radius: rem(4px)
+
+// Animations
+$okAnimation: okStopColor
+$errorAnimation: errorStopColor
+$lockedAnimation: lockedStopColor
