--- a/src/styles/config/_settings.sass
+++ b/src/styles/config/_settings.sass
@@ -1,2 +1,8 @@
-//Font families
+// Font families
 $font: "Audiowide", "verdana", sans-serif
+
+// Font sizes
+$font-xxl: rem(28px)
+$font-xl: rem(24px)
+$font-l:  rem(18px)
+
