add tests, update styles and file structure and fix audit package.json warnings

--- a/src/components/App/PinPadApp.module.sass
+++ b/src/components/App/PinPadApp.module.sass
@@ -1,6 +1,6 @@
-@import "./styles/resources.sass"
+@import "../../styles/resources.sass"
 
-.pinpad
+.pinPadApp
   display: flex
   flex-direction: column
   justify-content: space-between
