--- a/src/styles/abstracts/_fonts.sass
+++ b/src/styles/abstracts/_fonts.sass
@@ -1,8 +1,10 @@
-// Font families
+// Font family import
+@import url("https://fonts.googleapis.com/css?family=Audiowide")
+
+// Font family definition
 $font: "Audiowide", "verdana", sans-serif
 
 // Font sizes
 $font-xxl: rem(28px)
 $font-xl: rem(24px)
 $font-l:  rem(18px)
-
