--- a/src/styles/resources.sass
+++ b/src/styles/resources.sass
@@ -1,6 +1,5 @@
-// Config
+// Import abstracts
 @import "~sass-rem"
-@import "./config/variables"
-@import "./config/fonts"
-@import "./config/mixins"
-@import "./config/settings"
+@import "./abstracts/variables"
+@import "./abstracts/fonts"
+@import "./abstracts/mixins"
